--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,8 +20,8 @@ requirements:
     - pip
   run:
     - python >=3.8
-    - elasticsearch >=7.13.3
-    - elasticsearch-dsl >=7.4.0
+    - elasticsearch ==7.13.3
+    - elasticsearch-dsl ==7.4.0
     - amundsen-common >=0.27.0
     - attrs >=19.1.0
     - boto3 >=1.17.23
