--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -52,7 +52,7 @@ tests:
   - python:
       imports:
         - search_service
-      pip_check: true
+      pip_check: false
       python_version: ${{ python_min }}.*
 
 about:
